<resources>
    <string name="app_name">Note App</string>

    <string name="menu_settings_group">Settings</string>
    <string name="more">more</string>
    <string name="sort">SORT</string>
    <string name="notepad_free">Notepad Free</string>
    <string name="time_note">Last edit: 22/10/2024, 10h51 SA</string>
    <string name="add">ADD</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="undo">UNDO</string>
    <string name="save">SAVE</string>
    <string name="text_null">Enter title…</string>
    <string name="categories">Categories</string>
    <string name="export_notes_to_text_files">Export notes to text files</string>
    <string name="import_text_files">Import text files</string>
    <string name="select_all_notes">Select all notes</string>
    <string name="empty_trash">Empty trash</string>
    <string name="undelete_all">Undelete all</string>
    <string name="redo">Redo</string>
    <string name="undo_all">Undo all</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="export_to_a_text_files">Export to a text file</string>
    <string name="categorize">Categorize</string>
    <string name="colorize">Colorize</string>
    <string name="convert_to_checklist">Convert to checklist</string>
    <string name="switch_to_read_mode">Switch to read mode</string>
    <string name="print">Print</string>
    <string name="show_fomatting_bar">Show fomatting bar</string>
    <string name="show_info">Show info</string>
    <string name="enter_text">Enter text…</string>
    <string name="sort_by">Sort by</string>
    <string name="edit_date_from_newest">edit date: from newest</string>
    <string name="edit_date_from_oldest">edit date: from oldest</string>
    <string name="title_a_to_z">title: A to Z</string>
    <string name="title_z_to_a">title: Z to A</string>
    <string name="creation_date_from_newest">creation date: from newest</string>
    <string name="create_date_from_oldest">create date: from oldest</string>
    <string name="color_in_order_as_shown_on_color_palette">color: in order as shown on color palette</string>
    <string name="cancel">Cancel</string>
    <string name="instruct">Tap (or click) the note above to open it.\nUse the + (plus) button below to create a new note.</string>
    <string name="arrow">arrow</string>
    <string name="theme">Theme</string>
    <string name="theme_des">Changes color theme of visible elements</string>
    <string name="password_settings">Password settings</string>
    <string name="note_list">Note list</string>
    <string name="trash">Move deleted notes to \'Trash\'</string>
    <string name="trashDes">Deleted notes will be stored in the \'Trash\' folder</string>
    <string name="diagnostic">Attach diagnostic info</string>
    <string name="diagnosticDes">Diagnostic info will be attached to e-mail messages</string>
    <string name="hideNoteTitleDiagnostic">Hide note titles in diagnostic log</string>
    <string name="hideNoteTitleDiagnosticDes">Hides note titles in diagnostic info before sending it to the technical support</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="backup">Use the device\'s backup</string>
    <string name="backupDes">The device can save notes in its backup copy important: please read the \"Help\" section to get more information</string>
    <string name="note_editting">Note editting</string>
    <string name="light">Light</string>
    <string name="solarized">Solarized</string>
    <string name="white">White</string>
    <string name="solarized_dark">Solarized dark</string>
    <string name="system_setting">System setting</string>
    <string name="dark">Dark</string>
    <string name="setPassword">Set password</string>
    <string name="setPasswordDes">Sets password needed to unlock the app</string>
    <string name="removePassword">Remove password</string>
    <string name="removePasswordDes">App will no longer require password to unlock</string>
    <string name="unlockTime">Unlock Time</string>
    <string name="unlockTimeDes">During this time the app won\'t ask for the password after unlocking the app</string>
    <string name="show_lock_app_button">Show lock app button</string>
    <string name="biometricsUnlockApp">Use biometrics to unlock the app</string>
    <string name="biometricsUnlockAppDes">use biometrics check (e.g fingerprint, face detection), if available</string>
    <string name="new_category_name">New category name</string>
    <string name="edit_category_name">Edit category name</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="menu_note">Notes</string>
    <string name="menu_categories">Edit categories</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_rate_the_app">Rate the app</string>
    <string name="menu_help">Help</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_notes_group">Notes</string>
    <string name="menu_categories_group">Categories</string>
    <string name="menu_backup_group">Backup</string>
    <string name="select_category">Select category</string>
    <string name="time_create">Created: 22/ 10/ 2024, 10h51 SA</string>
    <string name="select_all">Select All</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="opacity_100">Opacity (100%):</string>
    <string name="remove_the_color">REMOVE THE COLOR</string>
    <string name="select_color">Select color</string>
    <string name="text_size_18">Text size 18</string>
    <string name="set_default_18">SET DEFAULT (18)</string>
    <string name="select_an_action_for_the_note">Select an action for the note</string>
    <string name="undelete">Undelete</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delete_the_selected_notes">Delete the selected notes?</string>
    <string name="select_directory">Chưa chọn thư mục</string>
    <string name="untitled">Untitled</string>
    <string name="txt">%1$s.txt</string>
    <string name="select_none_note">Không có ghi chú nào được chọn</string>
    <string name="text_plain">text/plain</string>
    <string name="error_log_create_file">Lỗi khi tạo tệp: %1$s</string>
    <string name="saved_note">Tệp đã được lưu: %1$s</string>
    <string name="error_log_save_file">Lỗi khi lưu tệp: %1$s</string>
    <string name="editnewest">editnewest</string>
    <string name="editoldest">editoldest</string>
    <string name="a_z">a_z</string>
    <string name="z_a">z_a</string>
    <string name="createnewest">createnewest</string>
    <string name="createoldest">createoldest</string>
    <string name="color">color</string>
    <string name="update_categories">Update categories</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="restore_note">Restore note</string>
    <string name="delete_log">The note will be deleted permanently!\nAre you sure that you want to delete the \'%1$s\' note?</string>
    <string name="deleted_notes">Deleted notes</string>
    <string name="delete_log_confirm">Are you sure that you want to delete the selected notes?\nThe notes will be deleted permanently.</string>
    <string name="restore_all_notes">Restore all notes?</string>
    <string name="delete_trash_log">All trashed notes will be deleted permanently. Are you sure that you want to delete all of the trashed notes?</string>
    <string name="restored_notes">Restored notes</string>
    <string name="delete_category">Delete category \'%1$s\'? Notes from the category won\'t be deleted</string>
    <string name="default_text">"\nThank you for downloading Notepad Free. This is a welcome message.\nYou can delete this message by clicking Delete button in the top right corner.\nYou can revert any unwanted changes during note edition with the \"Undo\" and \"Redo\" buttons. Try to edit this text, and click the buttons in the top right corner.\nPlease check the main menu for additional functions, like Help screen, backup functions, or settings. It can be opened with the button in the top left corner of the main screen.\nHave a nice day.\n☺️\n"</string>
    <string name="first_title">Hi, how are you? (tap to open)</string>
    <string name="saved">Saved</string>
    <string name="delete_log_detail">The \'%1$s\' note will be deleted.\nAre you sure?</string>
    <string name="delete_log_detail_permanently">The note will be deleted permanently!\nAre you sure that you want to delete the \'%1$s\' note?</string>
    <string name="sum">+</string>
    <string name="open_the_last_chosen_category">Open the last chosen category</string>
    <string name="opens_the_last_chosen_category_des">Opens the last chosen category on app start</string>
    <string name="show_note_categories">Show note categories</string>
    <string name="show_note_categories_des">Shows categories for each note on the list</string>
    <string name="show_note_keyboard">Show note keyboard</string>
    <string name="show_note_keyboard_des">Show keyboard after entering the note screen</string>
    <string name="cursor_postition_in_a_note">Cursor postition in a note</string>
    <string name="cursor_postition_in_a_note_des">Cursor position after opening a note with keyboard visible</string>
    <string name="show_text_formatting_toolbar">Show text formatting toolbar</string>
    <string name="show_text_formatting_toolbar_des">Shows a bar with text formatting tools (e.g. setting bold font)</string>
    <string name="default_note_text_font_size">Default note text font size</string>
    <string name="default_note_text_font_size_value">18</string>
    <string name="switch_save_and_undo_buttons">Switch \"Save\" and \"Undo\" buttons</string>
    <string name="switch_save_and_undo_buttons_des">Switches the \"Save\" and \"Undo\" buttons placement</string>
    <string name="save_notes_automatically">Save notes automatically</string>
    <string name="save_notes_automatically_des">Changes in notes are saved automatically. Disabling it may cause losing unsaved parts of notes</string>
    <string name="confirm_dropping_unsaved_change">Confirm dropping unsaved changes</string>
    <string name="confirm_dropping_unsaved_change_des">Asks for confirmation before closing a note with unsaved changes.</string>
    <string name="open_notes_in_read_mode">Open notes in read mode</string>
    <string name="open_notes_in_read_mode_des">Open notes in read mode by default</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_des">Keeps the screen from turning off after opening a note</string>
    <string name="disable_text_autocomplete">Disable text autocomplete</string>
    <string name="disable_text_autocomplete_des">Disables phone keyboard\'s autocomplete feature.\nMay cause side effects, for example disabling starting sentences with a capital letter. Recommended solution is to disable autocompletion directly in the phone keyboard\'s settings.</string>
    <string name="restore_the_selected_notes">Restore the selected notes?</string>
    <string name="delete_selected_trash_log">Are you sure that you want to delete the selected notes? The notes will be deleted permanently.</string>
    <string name="add_item">+ ADD ITEM</string>
    <string name="convert_to_text">Convert to text</string>
</resources>