<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete" />
    <item
        android:id="@+id/search"
        app:showAsAction="never"
        android:orderInCategory="100"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search" />
    <item
        android:id="@+id/print"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/print" />
    <item
        android:id="@+id/share"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/share" />
    <item
        android:id="@+id/categorize"
        android:orderInCategory="100"
        android:title="@string/categorize" />
    <item
        android:id="@+id/colorize"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/colorize" />
    <item
        android:id="@+id/show_info"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/show_info" />
</menu>