<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/sort_by"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdgSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSortBy">

        <RadioButton
            android:id="@+id/rdbNewest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/edit_date_from_newest" />

        <RadioButton
            android:id="@+id/rdbOldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_date_from_oldest" />

        <RadioButton
            android:id="@+id/rdbA_Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_a_to_z" />

        <RadioButton
            android:id="@+id/rdbZ_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_z_to_a" />

        <RadioButton
            android:id="@+id/rdbCreateNewest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_date_from_newest" />

        <RadioButton
            android:id="@+id/rdbCreateOldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_date_from_oldest" />

        <RadioButton
            android:id="@+id/rdbColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_in_order_as_shown_on_color_palette" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/sort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdgSort" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSort"
        app:layout_constraintTop_toBottomOf="@id/rdgSort" />
</androidx.constraintlayout.widget.ConstraintLayout>
