<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/theme"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdgTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTheme">

        <RadioButton
            android:id="@+id/rdbLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/rdbSolarized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solarized" />

        <RadioButton
            android:id="@+id/rdbWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white" />

        <RadioButton
            android:id="@+id/rdbSolarizeDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solarized_dark" />

        <RadioButton
            android:id="@+id/rdbDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark" />

        <RadioButton
            android:id="@+id/rdbSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/system_setting" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdgTheme" />
</androidx.constraintlayout.widget.ConstraintLayout>
