<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/noteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:maxLines="2"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitle" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintTop_toBottomOf="@id/noteContent"
        app:layout_constraintStart_toStartOf="parent"
        app:dividerColor="@color/textDes"/>

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:text="@string/select_an_action_for_the_note"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle">
        <RadioButton
            android:id="@+id/rdbUndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undelete"
            android:checked="true"
            android:textColor="@color/text"/>
        <RadioButton
            android:id="@+id/rdbDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/text"/>
    </RadioGroup>
    <TextView
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/ok"
        android:textColor="@color/textDes"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textColor="@color/textDes"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/radiogroup" />
</androidx.constraintlayout.widget.ConstraintLayout>