<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <ImageView
        android:id="@+id/action_back"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/textTopBar" />

    <TextView
        android:id="@+id/selected_count"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/textTopBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/action_select_all"
        app:layout_constraintStart_toEndOf="@id/action_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/action_select_all"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/select_all"
        android:src="@drawable/select_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/action_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/selected_count"
        app:tint="@color/textTopBar" />

    <ImageView
        android:id="@+id/action_delete"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/delete"
        android:src="@drawable/trash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/action_more"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/textTopBar" />

    <ImageView
        android:id="@+id/action_more"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/more"
        android:src="@drawable/more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/textTopBar" />
</androidx.constraintlayout.widget.ConstraintLayout>
